public_subnet/5_Route_Table_public_subnet.tf
resource "aws_route_table" "rtable" {
	vpc_id=aws_vpc.vpc_testing.id
	route {
		cidr_block="0.0.0.0/0"
		gateway_id=aws_internet_gateway.igw.id
	}
	tags={
		Name="public route table"
	}
}
